Sun Mar 21 09:33:08 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/common.c:
	- use odbc.ini name for configuration

Thu Mar 18 11:54:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c src/tds/read.c src/tds/write.c:
	- remove warnings under VMS

Wed Mar 17 17:46:16 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix a problem with DBD::ODBC

Tue Mar 16 09:18:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: transaction test now works

Tue Mar 16 09:04:02 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/transaction.c:
	- updated to correct behavior

Mon Mar 15 17:45:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: fix problem preparing a statement

Mon Mar 15 10:23:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/vasprintf.c:
	- fix bus error on machine where malloc(0) is a problem and
	  vsnprintf return -1 on insufficient buffer

Sat Mar 13 14:47:00 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/Makefile.am
	* src/ctlib/unittests/Makefile.am
	* src/dblib/unittests/Makefile.am
	* src/tds/unittests/Makefile.am
	- added ident strings to track CVS revisions as comments

Fri Mar 12 19:18:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/Makefile.am src/ctlib/unittests/cancel.c:
	- use define to comment test

Fri Mar 12 17:28:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/preperror.c: copied test from DBD::ODBC
	* src/tds/token.c: catch error on tds_process_simple_query

Fri Mar 12 16:45:29 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix mssql2k core using null TEXTs

Fri Mar 12 13:49:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/testodbc.c:
	- fix portability (big endian)
