@@ -8,7 +8,7 @@ anyone else can post a patch to Source Forge.
 In this way we can communicate with each
 other about the project's priorities and needs.  
 
-To Do List	$Id: TODO,v 1.97 2004/02/11 16:28:35 freddy77 Exp $
+To Do List	$Id: TODO,v 1.98 2004/03/22 19:13:12 freddy77 Exp $
 ------------
 Broken:
 . Undelimited data files should be read w/ tds_iconv_fread().
@@ -19,7 +19,8 @@ Broken:
 
 Postponed to 0.63 version
 . log and call error handler on problems with tds_iconv_init().
-. ct_dynamic and friends needed for DBD::Sybase placeholder support (work in progress)
+. ct_dynamic and friends needed for DBD::Sybase placeholder support
+ (work in progress)
 . iconv
   - support string conversions for Sybase
   - input name "ASCII" must always have a canonical form (needed ??)
@@ -32,7 +33,6 @@ Postponed to 0.63 version
   freetds.org
 . drop txt2man from cvs, skip building man pages without it. 
 . Rename TDS 8.0 to TDS 7.1, to be consistent with Microsoft's name
-. Rationalize libtds structure and *_alloc functions (ML 5 December 2002, sb:"names") (work in progress)
 . be able to disable iconv for BCP (see Sybase documentation)
 . UTF-8 unit tests (libTDS)
   - very large column name (128 on mssql), no-english to UTF-8 client
@@ -43,6 +43,26 @@ Postponed to 0.63 version
 . FAQ
   - multiple statemets question
   - PHP workaround with multiple connections (see ML)
+
+Started in 0.63
+- rationalize libtds structure and *_alloc functions 
+  (ML 5 December 2002, sb:"names")
+  (remove INFO and others)
+  BCPCOLINFO rename ? I think this structure should be removed
+  (in a future version ?)
+- header privatizations (removing tds.h dependency)  this is quite 
+  important for future binary compatibility. 
+  Export limitation are committed and works.
+- cancel. We added a test, analyzed the problem but no code... 
+  We have two options: comment test or start coding.
+  * test commented (document in README ??)
+- prepared statement. There are some code (needed for Oracle bindings)
+  to fetch data types after prepare. There are a lot of TODO in SQLPrepare
+  (for optimizations and others problems). binary_test fails if
+  compiled with --enable-developing. 
+- ODBC data test fails for numeric, convert.c do not convert 
+  NUMERIC ->NUMERIC changing precision/scale
+  * this part never worked, commented
 
 For future versions (in priority order within library):
   All:
@@ -77,7 +97,7 @@ For future versions (in priority order within library):
 . support encrypted connections
 . read on partial packet, do not wait entire one
 . net.c file with all network stuff
-. detect if realloc/free accepts NULL pointers
+. detect if realloc/free accepts NULL pointers (in configure.in)
 . support for password longer than 30 characters under Sybase
 
   db-lib
@@ -121,7 +141,7 @@ For future versions (in priority order within library):
 . constants parameters in call syntax (ie {?=func(10,?)} )
 . test and fix: select with compute
 . test and fix: hidden fields (FOR BROWSE select)
-. SQLDescribeParam (Sybase seem to require it)
+. SQLDescribeParam (Sybase seems to require it)
 . change ODBC_RETURN to return errs.lastrc (not to set) and use errs.lastrc
   to store error, cache some errors (truncated output)
 . handle no termination on odbc_set_string*
