@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.34 2004/01/16 21:09:57 freddy77 Exp $
+# $Id: Makefile.am,v 1.35 2004/03/22 19:13:13 freddy77 Exp $
 
 SUBDIRS			=	unittests
 
@@ -6,7 +6,7 @@ INCLUDES		=	-I$(top_srcdir)/include
 noinst_LTLIBRARIES	=	libtds_objects.la
 libtds_objects_la_SOURCES=	mem.c token.c util.c login.c read.c \
 	write.c convert.c numeric.c config.c query.c iconv.c \
-	locale.c challenge.c threadsafe.c vstrbuild.c md4.c \
+	locale.c challenge.c threadsafe.c vstrbuild.c md4.c md5.c \
 	des.c tdsstring.c getmac.c data.c net.c
 libtds_objects_la_LDFLAGS=
 libtds_objects_la_LIBADD=
